fixed img paths

--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
       <div class="summary-content">
         <h3 class="summary-title">Summary</h3>
         <div class="summary-item reaction">
-          <img src="/assets/images/icon-reaction.svg" alt="Reaction Icon" class="icon" />
+          <img src="./assets/images/icon-reaction.svg" alt="Reaction Icon" class="icon" />
           <span class="title">Reaction</span>
           <span class="score">80&nbsp;</span><span>/ 100</span>
         </div>
         <div class="summary-item memory">
-          <img src="/assets/images/icon-memory.svg" alt="Memory Icon" class="icon" />
+          <img src="./assets/images/icon-memory.svg" alt="Memory Icon" class="icon" />
           <span class="title">Memory</span>
           <span class="score">92&nbsp;</span><span>/ 100</span>
         </div>
         <div class="summary-item verbal">
-          <img src="/assets/images/icon-verbal.svg" alt="Verbal Icon" class="icon" />
+          <img src="./assets/images/icon-verbal.svg" alt="Verbal Icon" class="icon" />
           <span class="title">Verbal</span>
           <span class="score">61&nbsp;</span><span>/ 100</span>
         </div>
         <div class="summary-item visual">
-          <img src="/assets/images/icon-visual.svg" alt="Visual Icon" class="icon" />
+          <img src="./assets/images/icon-visual.svg" alt="Visual Icon" class="icon" />
           <span class="title">Visual</span>
           <span class="score">72&nbsp;</span><span>/ 100</span>
         </div>
